# BrownM7

./: BM1D.cc  CMakeLists.txt  README.md  result.root  setup.sh
include/: BM1DProcess.hh  Plotter.hh
src/: BM1DProcess.cc  Plotter.cc
